tests/ppapi_browser/bad/ppapi_bad_crossorigin.nmf
{
  "nexes": {
    "x86-32": "http://www.google.com/crossorigin.nexe",
    "x86-64": "http://www.google.com/crossorigin.nexe",
    "arm": "http://www.google.com/crossorigin.nexe"
  }
}
